@startuml
skinParam classAttributeIconSize 0

abstract class Weapon{
#weaponType: String
#points: int
#subscriptionType: String

+getType(): String
+getPoints(): int
{abstract}+execute(): String
+getSubscriptionType(): String

}

abstract class Gun{
{abstract} +execute(): String
}

abstract class Knife{
{abstract} +execute(): String
}

Weapon <|-- Gun
Weapon <|-- Knife

Knife <|-- PocketKnife

Gun <|-- HandGun
Gun <|-- MachineGun
Gun <|-- PelletGun



@enduml